--- a/client/sale.html
+++ b/client/sale.html
@@ -14,7 +14,7 @@
     </style>
   <body>
     <h3>Braintree Sale</h3>
-    <form action="/process/settle" method="post">
+    <form action="/process/sale" method="post">
       <input type="text" name="amount" placeholder="Amount"/><br/>
       <div id="ui"></div>
       <input type="submit" name="Submit">
