--- a/client/sale.html
+++ b/client/sale.html
@@ -23,6 +23,7 @@
     <script src="https://js.braintreegateway.com/v2/braintree.js"></script>
     <script>
       //Call the get client token helper
+      /*global getBraintreeClientToken*/
       getBraintreeClientToken();
       /*global braintree*/
       //Function that is executed when the helper gets the token
