--- a/client/settle.html
+++ b/client/settle.html
@@ -10,6 +10,7 @@
         padding-top: 60px;
       }
     </style>
+  </head>
   <body class="container">
     <div class="row">
       <div class="col-md-12">
@@ -18,6 +19,13 @@
           <input class="form-control" type="text" name="trxid" placeholder="Transaction ID"/><br/>
           <input type="submit" name="Submit">
         </form>
+      </div>
+    </div>
+    <br/>
+    <br/>
+    <div class="row">
+      <div class="col-md-12">
+        <a href="/">Back to Home</a>
       </div>
     </div>
   </body>
