--- a/client/sale.html
+++ b/client/sale.html
@@ -4,18 +4,14 @@
     <title>Chat Example</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
     <script type="text/javascript" src="/js/jquery.min.js"></script>
     <script type="text/javascript" src="/js/token.js"></script>
-    <style>
-      body {
-        padding-top: 60px;
-      }
-    </style>
+  </head>
   <body class="container">
     <div class="row">
       <div class="col-md-12">
         <h3>Braintree Sale</h3>
+        <!-- HTML FORM / CLIENT -->
         <form action="/process/sale" method="post">
           <input class="form-control" type="text" name="amount" placeholder="Amount"/><br/>
           <div id="ui"></div>
@@ -23,7 +19,15 @@
         </form>
       </div>
     </div>
+    <br/>
+    <br/>
+    <div class="row">
+      <div class="col-md-12">
+        <a href="/">Back to Home</a>
+      </div>
+    </div>
     
+    <!-- Javascript -->
     <script src="https://js.braintreegateway.com/v2/braintree.js"></script>
     <script>
       //Call the get client token helper
