--- a/client/index.html
+++ b/client/index.html
@@ -4,15 +4,14 @@
     <title>Chat Example</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
-    <style>
-      body {
-        padding-top: 60px;
-      }
-    </style>
-  <body>
-    <h3>Links to files</h3>
-    <a href="sale.html">Sale</a><br/>
-    <a href="settle.html">Settle</a><br/>
+  </head>
+  <body class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h3>Links to files</h3>
+        <a href="sale.html">Sale</a><br/>
+        <a href="settle.html">Settle</a><br/>
+      </div>
+    </div>
   </body>
 </html>
